@@ -2194,7 +2194,8 @@
 <b>4.5.x</b><br>
 1) kernel: mips: fix possible corruption of cache mode by mprotect.<br>
 2) kernel: mips: remove cpu_has_safe_index_cacheops.<br>
-3) kernel: net: tcp: increase size at which tcp_bound_to_half_wnd bounds to > TCP_MSS_DEFAULT.<br>
+3) kernel: cdc_ncm: workaround for EM7455 silent data interface.<br>
+4) kernel: net: tcp: increase size at which tcp_bound_to_half_wnd bounds to > TCP_MSS_DEFAULT.<br>
 <br>
 <br>
 <br>
